# arbiter

./: .gitignore  ARTIFACT.md  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: artifact.yml
data/: openrouter_arbiter_costs.csv
data/analysis/: artifact_manifest.json  cross_vendor_analysis.json  (+43 more)
docs/: dual_track_research_plan_2026.md  paper.md  paper_outline.md
experiments/: spike_conflict_detection.py
papers/: .gitignore  abstract.tex  appendix.tex  background.tex  conclusion.tex  convert_paper.py  discussion.tex  fix_colspec.py  fix_tables.py  intro.tex  main.tex  methodology.tex  paper_raw.tex  postprocess_pandoc.py  references.bib  results.tex  test_results.tex  test_section.tex
scripts/: analyze_prompt.py  analyze_scourer_data.py  clean_openrouter_csv.py  generate_artifact_manifest.py  render_gemini_prompt.py  reproduce_artifact.sh  run_e1_parseability.py  run_e2_model_sweep.py  run_e2_semantic_ablation.py  run_e3_persistent_high_i.py  run_scalar_tensor_ablation.py  run_scourer.py
tests/: characterize_adversarial.py  characterize_executor_mode.py  characterize_semantic.py  characterize_system_prompt.py  test_adversarial.py  test_conflict_detection.py  test_decision_policy.py  test_ensemble.py  test_heuristic_decomposer_independent.py  test_integration_pipeline.py  test_interference_tensor.py  test_llm_caller_independent.py  test_multi_provider.py  test_pipeline.py  test_placeholder.py  test_prompt_blocks.py  test_registry.py  test_registry_independent.py  test_rules.py  test_scourer.py  test_system_prompt_conflicts.py
(+78 files in other folders)
