[project]
name = "arbiter"
version = "0.1.0"
description = "Three-tier evaluation framework for resolving conflicts in LLM-mediated query systems"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
spike = [
    "anthropic>=0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arbiter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
