[project]
name = "arbiter"
version = "0.1.0"
description = "Three-tier evaluation framework for resolving conflicts in LLM-mediated query systems"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "anthropic>=0.83.0",
    "openai>=2.21.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
spike = [
    "anthropic>=0.40",
]
openai-compat = [
    "openai>=1.0",
]
# For contributors: includes everything needed to run all tests
all = [
    "arbiter[dev,spike,openai-compat]",
]

[project.scripts]
arbiter = "arbiter.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arbiter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires ANTHROPIC_API_KEY and live API access",
]
